<resources>
    <string name="app_name">Puzzle15</string>
    <string name="app_logo">App Logo</string>

    <string name="new_game">New Game</string>
    <string name="high_score">High Score</string>
    <string name="high_scores">High Scores</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="rules">Rules</string>

    <string name="signIn"><u>Sign In With Google Account</u></string>
    <string name="signOut"><u>Sign Out</u></string>

    <string name="signin_failed">Sign In failed.</string>

    <string name="rule1">1. Click on any block adjacent to the empty block to swap.</string>
    <string name="rule2">2. Your aim is to sort the blocks in increasing order.</string>

    <string name="preference_file_key">com.rajatgoyal.puzzle15.PREFERENCE_FILE_KEY</string>

    <string name="moves">Moves</string>
    <string name="time">Time</string>

    <string name="moves_label">Moves : </string>
    <string name="time_label">Time : </string>

    <string name="game_won">Game Won !!</string>
    <string name="check_internet">Please check your internet connection.</string>
    <string name="no_high_score">No high score yet.</string>
    <string name="no_leaderboard">No leaderboard yet.</string>

    <string name="quit_the_game">Are you sure you want to quit the game?</string>
    <string name="play_new_game">Want to play a new game?</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="initial_moves">0</string>
    <string name="initial_time">00:00:00</string>

    <string name="hours">hours</string>
    <string name="minutes">minutes</string>
    <string name="seconds">seconds</string>

    <string name="sampleAdunitId">ca-app-pub-3940256099942544/6300978111</string>
    <string name="sampleAppId">ca-app-pub-3940256099942544~3347511713</string>
    <string name="testDeviceId">1F45267EC1DC80D3BB57C61903D4631F</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <string name="web_client_id">205774853151-76klmhb0jd2glqh7e82pus3u2vfs7pmk.apps.googleusercontent.com</string>
</resources>
