<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.rajatgoyal.puzzle15.ui.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_weight="0"
        android:background="@color/light"
        android:gravity="center_horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/app_name"
        android:textColor="@color/background"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/icon" />

        <TextView
            android:id="@+id/welcome_message"
            tools:text="Welcome Rajat"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/newGame"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="0"
            android:background="@color/light"
            android:text="@string/new_game"
            android:textAllCaps="false"
            android:textColor="@color/background"
            android:textSize="20sp" />

        <Button
            android:id="@+id/highScore"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="0"
            android:background="@color/light"
            android:text="@string/high_score"
            android:textAllCaps="false"
            android:textColor="@color/background"
            android:textSize="20sp" />

        <Button
            android:id="@+id/leaderboard"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="0"
            android:background="@color/light"
            android:text="@string/leaderboard"
            android:textAllCaps="false"
            android:textColor="@color/background"
            android:textSize="20sp" />

        <Button
            android:id="@+id/help"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="0"
            android:background="@color/light"
            android:text="@string/rules"
            android:textAllCaps="false"
            android:textColor="@color/background"
            android:textSize="20sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/login_message"
        android:text="@string/signIn"
        android:textSize="16sp"
        android:layout_marginBottom="18dp"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>